update package.json file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://vinupeeks.github.io/portfolio",
+  "homepage": "https://vinupeeks.github.io/react-port",
   "name": "portfolio-vineeth",
   "version": "0.1.0",
   "private": true,
