Change url 'react-port' into 'port-folio'

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://vinupeeks.github.io/react-port",
+  "homepage": "https://vinupeeks.github.io/port-folio",
   "name": "portfolio-vineeth",
   "version": "0.1.0",
   "private": true,
